--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -1,48 +1,126 @@
-{% extends "base.html" %}
-{% load staticfiles %}
 
-{% block content %}
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
 
-<div class="jumbotron text-center">
-  <div class="container">
-    <a href="/" class="lang-logo">
-      <img src="{% static 'lang-logo.png'%}">
-    </a>
-    <h1>Getting Started with Python on Heroku</h1>
-    <p>This is a sample Python application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-python"><span class="glyphicon glyphicon-flash"></span> Getting Started with Python</a>
-    <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/python-getting-started"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
-  </div>
-</div>
-<div class="container">
-  <div class="alert alert-info text-center" role="alert">
-    To deploy your own copy, and learn the fundamentals of the Heroku platform, head over to the <a href="https://devcenter.heroku.com/articles/getting-started-with-python" class="alert-link">Getting Started with Python on Heroku</a> tutorial.
-  </div>
-  <hr>
-  <div class="row">
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-info-sign"></span> How this sample app works</h3>
-      <ul>
-        <li>This app was deployed to Heroku, either using Git or by using <a href="https://github.com/heroku/python-getting-started">Heroku Button</a> on the repository.</li>
+  <title>The Twelve-Factor App </title>
+  <meta name="description" content="A methodology for building modern, scalable, maintainable software-as-a-service apps.">
+  <meta name="author" content="Adam Wiggins">
 
-        <li>When Heroku received the source code, it grabbed all the dependencies in the <a href="https://github.com/heroku/python-getting-started/blob/master/requirements.txt">requirements.txt file</a>.</li>
-        <li>The platform then spins up a dyno, a lightweight container that provides an isolated environment in which the slug can be mounted and executed.</li>
-        <li>You can scale your app, manage it, and deploy over <a href="https://addons.heroku.com/">150 add-on services</a>, from the Dashboard or CLI.</li>
-        <li>Check out the <a href="https://devcenter.heroku.com/articles/getting-started-with-python">Getting Started</a> guide to learn more!</li>
-      </ul>
-    </div>
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-link"></span> Helpful Links</h3>
-      <ul>
-        <li><a href="https://www.heroku.com/home">Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/getting-started-with-python">Getting Started with Python on Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/django-app-configuration">Configuring Django Apps for Heroku</a></li>
-      </ul>
-    </div>
-  </div> <!-- row -->
-   <div class="alert alert-info text-center" role="alert">
-    Please do work through the Getting Started guide, even if you do know how to build such an application.  The guide covers the basics of working with Heroku, and will familiarize you with all the concepts you need in order to build and deploy your own apps.
-  </div>
-</div>
-{% endblock %}
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="images/favicon.ico">
+
+  <link rel="stylesheet" href="/css/screen.css" media="screen">
+  <link rel="stylesheet" href="/css/mobile.css" media="screen">
+  <link rel="stylesheet" href="/css/rsq7tro-d.css" media="screen">
+
+  <script type="text/javascript" src="/js/rsq7tro.js"></script>
+<!--  <script type="text/javascript">try{Typekit.load();}catch(e){}</script> -->
+</head>
+<body>
+
+
+  <header>
+    <h1><a href="./" title="The Twelve-Factor App">The Twelve-Factor App</a></h1>
+  </header>
+
+  <section class="abstract">
+  <article>
+<h1 id="introduction">Introduction</h1>
+
+<p>In the modern era, software is commonly delivered as a service: called <em>web apps</em>, or <em>software-as-a-service</em>. The twelve-factor app is a methodology for building software-as-a-service apps that:</p>
+
+<ul>
+<li>Use <strong>declarative</strong> formats for setup automation, to minimize time and cost for new developers joining the project;</li>
+
+<li>Have a <strong>clean contract</strong> with the underlying operating system, offering <strong>maximum portability</strong> between execution environments;</li>
+
+<li>Are suitable for <strong>deployment</strong> on modern <strong>cloud platforms</strong>, obviating the need for servers and systems administration;</li>
+
+<li><strong>Minimize divergence</strong> between development and production, enabling <strong>continuous deployment</strong> for maximum agility;</li>
+
+<li>And can <strong>scale up</strong> without significant changes to tooling, architecture, or development practices.</li>
+</ul>
+
+<p>The twelve-factor methodology can be applied to apps written in any programming language, and which use any combination of backing services (database, queue, memory cache, etc).</p>
+</article>
+  <article>
+<h1 id="background">Background</h1>
+
+<p>The contributors to this document have been directly involved in the development and deployment of hundreds of apps, and indirectly witnessed the development, operation, and scaling of hundreds of thousands of apps via our work on the <a href='http://www.heroku.com/' target='_blank'>Heroku</a> platform.</p>
+
+<p>This document synthesizes all of our experience and observations on a wide variety of software-as-a-service apps in the wild. It is a triangulation on ideal practices for app development, paying particular attention to the dynamics of the organic growth of an app over time, the dynamics of collaboration between developers working on the app’s codebase, and <a href='http://blog.heroku.com/archives/2011/6/28/the_new_heroku_4_erosion_resistance_explicit_contracts/' target='_blank'>avoiding the cost of software erosion</a>.</p>
+
+<p>Our motivation is to raise awareness of some systemic problems we’ve seen in modern application development, to provide a shared vocabulary for discussing those problems, and to offer a set of broad conceptual solutions to those problems with accompanying terminology. The format is inspired by Martin Fowler’s books <em><a href='https://books.google.com/books/about/Patterns_of_enterprise_application_archi.html?id=FyWZt5DdvFkC' target='_blank'>Patterns of Enterprise Application Architecture</a></em> and <em><a href='https://books.google.com/books/about/Refactoring.html?id=1MsETFPD3I0C' target='_blank'>Refactoring</a></em>.</p>
+</article>
+  <article>
+<h1 id="who_should_read_this_document">Who should read this document?</h1>
+
+<p>Any developer building applications which run as a service. Ops engineers who deploy or manage such applications.</p>
+</article>
+</section>
+
+<section class="concrete">
+  <article>
+<h1 id="the_twelve_factors">The Twelve Factors</h1>
+
+<h2 id="i_codebase"><a href="./codebase">I. Codebase</a></h2>
+
+<h3 id="one_codebase_tracked_in_revision_control_many_deploys">One codebase tracked in revision control, many deploys</h3>
+
+<h2 id="ii_dependencies"><a href="./dependencies">II. Dependencies</a></h2>
+
+<h3 id="explicitly_declare_and_isolate_dependencies">Explicitly declare and isolate dependencies</h3>
+
+<h2 id="iii_config"><a href="./config">III. Config</a></h2>
+
+<h3 id="store_config_in_the_environment">Store config in the environment</h3>
+
+<h2 id="iv_backing_services"><a href="./backing-services">IV. Backing services</a></h2>
+
+<h3 id="treat_backing_services_as_attached_resources">Treat backing services as attached resources</h3>
+
+<h2 id="v_build_release_run"><a href="./build-release-run">V. Build, release, run</a></h2>
+
+<h3 id="strictly_separate_build_and_run_stages">Strictly separate build and run stages</h3>
+
+<h2 id="vi_processes"><a href="./processes">VI. Processes</a></h2>
+
+<h3 id="execute_the_app_as_one_or_more_stateless_processes">Execute the app as one or more stateless processes</h3>
+
+<h2 id="vii_port_binding"><a href="./port-binding">VII. Port binding</a></h2>
+
+<h3 id="export_services_via_port_binding">Export services via port binding</h3>
+
+<h2 id="viii_concurrency"><a href="./concurrency">VIII. Concurrency</a></h2>
+
+<h3 id="scale_out_via_the_process_model">Scale out via the process model</h3>
+
+<h2 id="ix_disposability"><a href="./disposability">IX. Disposability</a></h2>
+
+<h3 id="maximize_robustness_with_fast_startup_and_graceful_shutdown">Maximize robustness with fast startup and graceful shutdown</h3>
+
+<h2 id="x_devprod_parity"><a href="./dev-prod-parity">X. Dev/prod parity</a></h2>
+
+<h3 id="keep_development_staging_and_production_as_similar_as_possible">Keep development, staging, and production as similar as possible</h3>
+
+<h2 id="xi_logs"><a href="./logs">XI. Logs</a></h2>
+
+<h3 id="treat_logs_as_event_streams">Treat logs as event streams</h3>
+
+<h2 id="xii_admin_processes"><a href="./admin-processes">XII. Admin processes</a></h2>
+
+<h3 id="run_adminmanagement_tasks_as_oneoff_processes">Run admin/management tasks as one-off processes</h3>
+</article>
+</section>
+
+
+  <footer>
+  <div id="locales"><a href="/pt_br/">Brazilian Portuguese (pt_br)</a> | <a href="/es/">Español (es)</a> | <a href="/zh_cn/">简体中文 (zh_cn)</a> | <a href="/ko/">한국어 (ko)</a> | <a href="/ja/">日本語 (ja)</a> | <a href="/it/">Italiano (it)</a> | <a href="/de/">Deutsch (de)</a> | <span>English (en)</span> | <a href="/ru/">Русский (ru)</a> | <a href="/fr/">Français (fr)</a></div>
+  <div><a href="https://github.com/sethbergman/12-Factor" target="_blank">Source Code</a></div>
+  <div><a href="http://sethbergman.com" target="_blank">SethBergman.com</a></div>
+  <div><a href="https://github.com/sethbergman" target="_blank">Github Profile</a></div>
+</footer>
+</body>
+</html>
