--- a/hello/static/css/screen.css
+++ b/hello/static/css/screen.css
@@ -9,7 +9,7 @@ body {
 h1, h2, h3 {
   padding: 0;
   margin: 0;
-}  
+}
 
 h1, h2 {
   line-height: 1.25em;
@@ -29,7 +29,7 @@ header {
 }
 
 header h1 a {
-  background: url(/images/symbol.png) top center no-repeat;
+  background: url(./images/symbol.png) top center no-repeat;
   color: #FFFFFF;
   display: block;
   margin-top: 0.25em;
