--- a/hello/static/css/screen.css
+++ b/hello/static/css/screen.css
@@ -29,7 +29,7 @@ header {
 }
 
 header h1 a {
-  background: url(images/symbol.png) top center no-repeat;
+  background: url(/images/symbol.png) top center no-repeat;
   color: #FFFFFF;
   display: block;
   margin-top: 0.25em;
