--- a/hello/templates/dependencies.html
+++ b/hello/templates/dependencies.html
@@ -8,13 +8,13 @@
   <meta name="author" content="Adam Wiggins">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="images/favicon.ico">
+  <link rel="shortcut icon" href="http://12factor.stackriot.com/images/favicon.ico">
 
-  <link rel="stylesheet" href="/css/screen.css" media="screen">
-  <link rel="stylesheet" href="/css/mobile.css" media="screen">
-  <link rel="stylesheet" href="/css/rsq7tro-d.css" media="screen">
+  <link rel="stylesheet" href="http://12factor.stackriot.com/css/screen.css" media="screen">
+  <link rel="stylesheet" href="http://12factor.stackriot.com/css/mobile.css" media="screen">
+  <link rel="stylesheet" href="http://12factor.stackriot.com/css/rsq7tro-d.css" media="screen">
 
-  <script type="text/javascript" src="/js/rsq7tro.js"></script>
+  <script type="text/javascript" src="http://12factor.stackriot.com/js/rsq7tro.js"></script>
 <!--  <script type="text/javascript">try{Typekit.load();}catch(e){}</script> -->
 </head>
 <body>
