--- a/hello/templates/build-release-run.html
+++ b/hello/templates/build-release-run.html
@@ -41,7 +41,7 @@
 <li>The <em>run stage</em> (also known as “runtime”) runs the app in the execution environment, by launching some set of the app’s <a href="./processes">processes</a> against a selected release.</li>
 </ul>
 
-<p><img src="/images/release.png" alt="Code becomes a build, which is combined with config to create a release." /></p>
+<p><img src="http://12factor.stackriot.com/images/release.png" alt="Code becomes a build, which is combined with config to create a release." /></p>
 
 <p><strong>The twelve-factor app uses strict separation between the build, release, and run stages.</strong> For example, it is impossible to make changes to the code at runtime, since there is no way to propagate those changes back to the build stage.</p>
 
