--- a/hello/templates/codebase.html
+++ b/hello/templates/codebase.html
@@ -36,7 +36,7 @@
 
 <p>A <em>codebase</em> is any single repo (in a centralized revision control system like Subversion), or any set of repos who share a root commit (in a decentralized revision control system like Git).</p>
 
-<p><img src="/images/codebase-deploys.png" alt="One codebase maps to many deploys" /></p>
+<p><img src="http://12factor.stackriot.com/images/codebase-deploys.png" alt="One codebase maps to many deploys" /></p>
 
 <p>There is always a one-to-one correlation between the codebase and the app:</p>
 
