--- a/hello/templates/concurrency.html
+++ b/hello/templates/concurrency.html
@@ -33,7 +33,7 @@
 
 <p>Any computer program, once run, is represented by one or more processes. Web apps have taken a variety of process-execution forms. For example, PHP processes run as child processes of Apache, started on demand as needed by request volume. Java processes take the opposite approach, with the JVM providing one massive uberprocess that reserves a large block of system resources (CPU and memory) on startup, with concurrency managed internally via threads. In both cases, the running process(es) are only minimally visible to the developers of the app.</p>
 
-<p><img src="/images/process-types.png" alt="Scale is expressed as running processes, workload diversity is expressed as process types." /></p>
+<p><img src="http://12factor.stackriot.com/images/process-types.png" alt="Scale is expressed as running processes, workload diversity is expressed as process types." /></p>
 
 <p><strong>In the twelve-factor app, processes are a first class citizen.</strong> Processes in the twelve-factor app take strong cues from <a href="http://adam.heroku.com/past/2011/5/9/applying_the_unix_process_model_to_web_apps/">the unix process model for running service daemons</a>. Using this model, the developer can architect their app to handle diverse workloads by assigning each type of work to a <em>process type</em>. For example, HTTP requests may be handled by a web process, and long-running background tasks handled by a worker process.</p>
 
